[gd_scene load_steps=8 format=2]

[ext_resource path="res://scene/buildings/farm/farm.gd" type="Script" id=1]
[ext_resource path="res://scene/buildings/farm/fence.png" type="Texture" id=2]
[ext_resource path="res://scene/buildings/farm/wheat.png" type="Texture" id=3]
[ext_resource path="res://assets/flag/flag.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/ui/message-3d/message_3d.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/ui/bar-3d/hp_bar_3d.tscn" type="PackedScene" id=6]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 2.01974, 1, 1.44283 )

[node name="farm" type="StaticBody"]
collision_layer = 0
collision_mask = 0
input_ray_pickable = false
script = ExtResource( 1 )

[node name="pivot" type="Spatial" parent="."]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0 )

[node name="fence_1" type="Sprite3D" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.562693, 0, 1.16101 )
modulate = Color( 0.627451, 0.337255, 0, 1 )
alpha_cut = 2
texture = ExtResource( 2 )

[node name="fence_2" type="Sprite3D" parent="pivot"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.17091, 0, 0.563871 )
modulate = Color( 0.627451, 0.337255, 0, 1 )
alpha_cut = 2
texture = ExtResource( 2 )

[node name="fence_3" type="Sprite3D" parent="pivot"]
transform = Transform( -0.0110477, 0, 0.999939, 0, 1, 0, -0.999939, 0, -0.0110477, 1.17705, 0, -0.673132 )
modulate = Color( 0.627451, 0.337255, 0, 1 )
alpha_cut = 2
texture = ExtResource( 2 )

[node name="fence_4" type="Sprite3D" parent="pivot"]
transform = Transform( -0.999939, 0, -0.0110478, 0, 1, 0, 0.0110478, 0, -0.999939, 0.573228, 0, -1.27472 )
modulate = Color( 0.627451, 0.337255, 0, 1 )
alpha_cut = 2
texture = ExtResource( 2 )

[node name="fence_5" type="Sprite3D" parent="pivot"]
transform = Transform( -0.999651, 0, -0.0264212, 0, 1, 0, 0.0264212, 0, -0.999651, -0.633947, 0, -1.25367 )
modulate = Color( 0.627451, 0.337255, 0, 1 )
alpha_cut = 2
texture = ExtResource( 2 )

[node name="fence_6" type="Sprite3D" parent="pivot"]
transform = Transform( 0.0264213, 0, -0.999651, 0, 1, 0, 0.999651, 0, 0.0264213, -1.22618, 0, -0.640677 )
modulate = Color( 0.627451, 0.337255, 0, 1 )
alpha_cut = 2
texture = ExtResource( 2 )

[node name="fence_7" type="Sprite3D" parent="pivot"]
transform = Transform( 0.005428, 0, -0.999985, 0, 1, 0, 0.999985, 0, 0.005428, -1.21801, 0, 0.563281 )
modulate = Color( 0.627451, 0.337255, 0, 1 )
alpha_cut = 2
texture = ExtResource( 2 )

[node name="fence_8" type="Sprite3D" parent="pivot"]
transform = Transform( 0.999985, 0, 0.00542805, 0, 1, 0, -0.00542805, 0, 0.999985, -0.617577, 0, 1.16825 )
modulate = Color( 0.627451, 0.337255, 0, 1 )
alpha_cut = 2
texture = ExtResource( 2 )

[node name="wheat_1" type="Sprite3D" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 0.866026, 0.5, 0, -0.5, 0.866026, -0.785875, 0, 0.715876 )
alpha_cut = 2
texture = ExtResource( 3 )

[node name="wheat_2" type="Sprite3D" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 0.866026, 0.5, 0, -0.5, 0.866026, -0.0841824, 0, 0.715876 )
alpha_cut = 2
texture = ExtResource( 3 )

[node name="wheat_3" type="Sprite3D" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 0.866026, 0.5, 0, -0.5, 0.866026, 0.599916, 0, 0.715876 )
alpha_cut = 2
texture = ExtResource( 3 )

[node name="wheat_4" type="Sprite3D" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 0.866026, 0.5, 0, -0.5, 0.866026, -0.785875, 0, 0.0208907 )
alpha_cut = 2
texture = ExtResource( 3 )

[node name="wheat_5" type="Sprite3D" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 0.866026, 0.5, 0, -0.5, 0.866026, -0.0841824, 0, 0.0208907 )
alpha_cut = 2
texture = ExtResource( 3 )

[node name="wheat_6" type="Sprite3D" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 0.866026, 0.5, 0, -0.5, 0.866026, 0.599916, 0, 0.0208907 )
alpha_cut = 2
texture = ExtResource( 3 )

[node name="wheat_7" type="Sprite3D" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 0.866026, 0.5, 0, -0.5, 0.866026, -0.785875, 0, -0.722375 )
alpha_cut = 2
texture = ExtResource( 3 )

[node name="wheat_8" type="Sprite3D" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 0.866026, 0.5, 0, -0.5, 0.866026, -0.0841824, 0, -0.722375 )
alpha_cut = 2
texture = ExtResource( 3 )

[node name="wheat_9" type="Sprite3D" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 0.866026, 0.5, 0, -0.5, 0.866026, 0.599916, 0, -0.722375 )
alpha_cut = 2
texture = ExtResource( 3 )

[node name="flag" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.86596, 0, -2.10069 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.417379, 0 )
shape = SubResource( 1 )
disabled = true

[node name="hpBar" parent="." instance=ExtResource( 6 )]
transform = Transform( 0.40958, 0, 0, 0, 0.840809, 0, 0, 0, 1, 0, 3.65155, -2 )

[node name="message_3d" parent="." instance=ExtResource( 5 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )

[node name="coin_gain_timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Tween" type="Tween" parent="."]

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]

[connection signal="timeout" from="coin_gain_timer" to="." method="_on_coin_gain_timer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
